injecao de dados na home controller

--- a/MCook/appsettings.json
+++ b/MCook/appsettings.json
@@ -7,6 +7,6 @@
   },
  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GCookDb": "server=localhost;port=3306;database=gcook;uid=root;pwd=''"
+    "MCookDb": "server=localhost;port=3306;database=mcook;uid=root;pwd=''"
   }
 }
